Updated styles to fix hero on IE11

--- a/src/components/hero.module.scss
+++ b/src/components/hero.module.scss
@@ -19,6 +19,7 @@
   color: $white;
   position: absolute;
   background: rgba(0, 0, 0, 0.5);
+  left: 0;
   bottom: 0;
   display: flex;
   flex-direction: column;
@@ -38,6 +39,7 @@
   font-weight: bold;
   margin: 0;
   padding: 1rem 0;
+  text-align: center;
 
   @media #{$medium} {
     font-size: 32pt;
